feat(demo): add simulated game mode (--demo / DEMO_MODE) with occasional score updates; VS Code tasks + README

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,15 @@
       "cwd": "${workspaceFolder}"
     },
     {
+      "name": "Run: Demo Sim Loop",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/app.py",
+      "console": "integratedTerminal",
+      "args": ["--sim", "--demo"],
+      "cwd": "${workspaceFolder}"
+    },
+    {
       "name": "Run: Matrix Loop (Pi)",
       "type": "python",
       "request": "launch",
