--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,6 +27,12 @@
       "problemMatcher": []
     },
     {
+      "label": "Fetch WNBA assets (logos/colors)",
+      "type": "shell",
+      "command": "bash -lc 'source .venv/bin/activate && python scripts/fetch_wnba_assets.py'",
+      "problemMatcher": []
+    },
+    {
       "label": "Run (sim once)",
       "type": "shell",
       "command": "bash -lc 'source .venv/bin/activate && python app.py --sim --once'",
