fix(assets): resolve assets relative to repo; add check script and VS Code task; improve logo paste reliability

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,6 +33,12 @@
       "problemMatcher": []
     },
     {
+      "label": "Check assets (favorites/logos)",
+      "type": "shell",
+      "command": "bash -lc 'source .venv/bin/activate && python scripts/check_assets.py'",
+      "problemMatcher": []
+    },
+    {
       "label": "Run (sim once)",
       "type": "shell",
       "command": "bash -lc 'source .venv/bin/activate && python app.py --sim --once'",
