feat(render): add configurable live layouts (stacked|big-logos), logo variant config; new live_big scene; docs and VS Code launch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,18 @@
       "cwd": "${workspaceFolder}"
     },
     {
+      "name": "Run: Demo Sim (Big Logos)",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/app.py",
+      "console": "integratedTerminal",
+      "args": ["--sim", "--demo"],
+      "cwd": "${workspaceFolder}",
+      "env": {
+        "LIVE_LAYOUT": "big-logos"
+      }
+    },
+    {
       "name": "Run: Matrix Loop (Pi)",
       "type": "python",
       "request": "launch",
