--- a/web-admin/package.json
+++ b/web-admin/package.json
@@ -12,6 +12,9 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "19.1.12",
+    "typescript": "5.9.2"
   }
 }
-
