--- a/web-admin/package.json
+++ b/web-admin/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "ajv": "^8.12.0",
     "@supabase/supabase-js": "^2.44.0",
     "next": "^14.2.5",
     "react": "^18.3.1",
