Cloud admin + web UI: agent, Supabase, and config editor (#1)
* docs(admin): add cloud-first web admin plan

* feat(reload): add file+SIGHUP config hot-reload; add ConfigWatcher; scaffold agent skeleton; add VS Code agent tasks

* feat(agent): scaffold Realtime client (websocket) and agent command handlers; add systemd unit/env template; update requirements and README

* feat(agent): add CLI publisher for Supabase Realtime; add Edge Function scaffold to publish commands; improve Realtime URL handling; update docs

* feat(supabase): add SQL migration with devices/configs/events tables, RLS policies, helper functions, and Realtime publication

* docs(supabase): add instructions for obtaining and setting SUPABASE_* env vars, DEVICE_ID/DEVICE_TOKEN, and Pi systemd env setup

* docs(supabase): step-by-step guide to add a user and create a device id; include SQL and Table Editor paths

* chore(supabase): rename migration to 14-digit timestamp for CLI compatibility; add Supabase README with setup and verification

* fix(reload): declare RELOAD_REQUESTED as global in main() to avoid UnboundLocalError

* docs(agent): add example /etc/wnba-led-agent.env template and README instructions to find/set DEVICE_ID

* docs(supabase): add deploy command for on-action Edge Function and required envs

* docs(supabase): add cURL examples to invoke on-action function for RESTART and APPLY_CONFIG

* feat(supabase): add on-config-write Edge Function (store config + broadcast); add config JSON schema; update docs and VS Code tasks

* feat(web-admin): add minimal Next.js scaffold with Supabase Auth, devices list, device detail with apply config and actions; env example and docs

* feat(web-admin): switch auth to email+password with sign in/sign up form; add README auth setup instructions

* feat(supabase): add mint-device-token function; add devices update policy migration; docs for minting and setting DEVICE_TOKEN

* fix(supabase): correct DO EXECUTE quoting for device update policy migratio

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,11 +8,35 @@
       "problemMatcher": []
     },
     {
+      "label": "Supabase: Deploy on-action",
+      "type": "shell",
+      "command": "bash -lc 'supabase functions deploy on-action'",
+      "problemMatcher": []
+    },
+    {
+      "label": "Supabase: Deploy on-config-write",
+      "type": "shell",
+      "command": "bash -lc 'supabase functions deploy on-config-write'",
+      "problemMatcher": []
+    },
+    {
       "label": "Install requirements",
       "type": "shell",
       "command": "bash -lc 'source .venv/bin/activate && pip install -r requirements.txt'",
       "problemMatcher": [],
       "dependsOn": ["Create venv"]
+    },
+    {
+      "label": "Run Agent (skeleton)",
+      "type": "shell",
+      "command": "bash -lc 'source .venv/bin/activate && python -m src.agent.agent'",
+      "problemMatcher": []
+    },
+    {
+      "label": "Agent: Apply sample config",
+      "type": "shell",
+      "command": "bash -lc 'source .venv/bin/activate && python -m src.agent.agent apply config/favorites.json'",
+      "problemMatcher": []
     },
     {
       "label": "Install rgbmatrix (bindings)",
