--- a/web-admin/package.json
+++ b/web-admin/package.json
@@ -8,11 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "ajv": "^8.12.0",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.14.1",
+    "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.44.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "ajv": "^8.12.0",
+    "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "next": "^14.2.5",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/react": "19.1.12",
