--- a/web-admin/package.json
+++ b/web-admin/package.json
@@ -40,6 +40,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "19.1.12",
     "husky": "^9.1.7",
     "jest": "^30.1.3",
