--- a/web-admin/package.json
+++ b/web-admin/package.json
@@ -42,6 +42,8 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/react": "19.1.12",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.2.32",
     "husky": "^9.1.7",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
