--- a/web-admin/package.json
+++ b/web-admin/package.json
@@ -37,6 +37,8 @@
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "@swc/core": "^1.13.5",
+    "@swc/jest": "^0.2.39",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
