--- a/web-admin/.eslintrc.json
+++ b/web-admin/.eslintrc.json
@@ -1,8 +1,5 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:jsx-a11y/recommended"
-  ],
+  "extends": ["next/core-web-vitals", "plugin:jsx-a11y/recommended"],
   "rules": {
     "jsx-a11y/alt-text": "error",
     "jsx-a11y/aria-props": "error",
@@ -14,6 +11,7 @@
     "jsx-a11y/heading-has-content": "error",
     "jsx-a11y/html-has-lang": "error",
     "jsx-a11y/lang": "error",
-    "jsx-a11y/no-access-key": "error"
+    "jsx-a11y/no-access-key": "error",
+    "jsx-a11y/label-has-associated-control": "off"
   }
 }
