feat: implement comprehensive reliability and performance improvements
- Enhanced ESPN API client with graceful failure handling and caching
- Resilient HTTP client with circuit breaker and exponential backoff
- Adaptive refresh rates based on game state and network conditions
- Comprehensive error recovery with stale cache fallbacks
- Network condition monitoring and intelligent retry strategies

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,9 @@ SIM_MODE=false
 DEMO_MODE=false
 LIVE_LAYOUT=stacked
 LOGO_VARIANT=mini
+
+# Network resilience
+ESPN_CACHE_TTL=300
+ESPN_STALE_CACHE_MAX_AGE=3600
+ESPN_CIRCUIT_FAILURE_THRESHOLD=3
+ESPN_MAX_FALLBACK_AGE_MINUTES=30
