chore: improve code formatting and ignore build cache
- Add trailing newlines and consistent formatting to config files
- Remove tsconfig.tsbuildinfo from git tracking (build cache)
- Update .gitignore to exclude TypeScript build info files

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ web-admin/node_modules/
 web-admin/.next/
 web-admin/.env.local
 web-admin/.vercel
+web-admin/tsconfig.tsbuildinfo
 
 node_modules/
 CLAUDE.local.md
