feat: implement comprehensive multi-sport NHL integration
- Add complete multi-sport architecture with WNBA and NHL support
- Implement intelligent priority resolution system for game conflicts
- Create sport abstraction layer for future NBA, MLB, NFL expansion
- Add NHL API client with same resilience features as WNBA
- Build comprehensive web admin interface for multi-sport management
- Maintain full backward compatibility with existing WNBA configurations
- Add database schema for multi-sport team and configuration management

Key Features:
- Smart conflict resolution between WNBA and NHL games
- Web admin Multi-Sport tab with drag-and-drop priority configuration
- Live game monitoring with manual override capabilities
- Per-sport favorite team management with visual interface
- Environment variable control for all multi-sport settings
- Automatic migration from single-sport to multi-sport configuration

Technical Implementation:
- Sport abstraction layer (SportClient interface)
- Enhanced data models (SportGameSnapshot)
- Multi-sport aggregator with priority scoring algorithm
- NHL client using existing resilient HTTP infrastructure
- React components for sport management and live game monitoring
- Database tables for sport teams, device configs, and game overrides

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,21 @@ ESPN_CACHE_TTL=300
 ESPN_STALE_CACHE_MAX_AGE=3600
 ESPN_CIRCUIT_FAILURE_THRESHOLD=3
 ESPN_MAX_FALLBACK_AGE_MINUTES=30
+
+# NHL API settings
+NHL_HTTP_TIMEOUT=10
+NHL_CACHE_TTL=300
+NHL_STALE_CACHE_MAX_AGE=3600
+NHL_CIRCUIT_FAILURE_THRESHOLD=3
+NHL_MAX_FALLBACK_AGE_MINUTES=30
+
+# Multi-sport mode
+MULTI_SPORT_MODE=false
+LEGACY_MODE=false
+ENABLE_WNBA=true
+ENABLE_NHL=false
+SPORT_PRIORITIES=wnba,nhl
+LIVE_GAME_BOOST=true
+FAVORITE_TEAM_BOOST=true
+CLOSE_GAME_BOOST=true
+CONFLICT_RESOLUTION=priority
