--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,22 @@ jobs:
       working-directory: ./web-admin
       run: npm run test:ci
 
+    - name: Set up Python
+      if: matrix.node-version == '20.x'
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install Python dependencies
+      if: matrix.node-version == '20.x'
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run Python unit tests
+      if: matrix.node-version == '20.x'
+      run: python -m unittest discover
+
     - name: Upload coverage reports
       uses: codecov/codecov-action@v4
       with:
