feat: integrate Supabase as central storage for sports/leagues
- Create comprehensive database schema for sports, leagues, teams
- Add device-specific league preferences and favorite teams tables
- Implement Supabase client functions for web-admin
- Add Python Supabase loader to read configurations from database
- Update web-admin to directly use Supabase instead of mock API
- Add migration and seed scripts for initial data

This architecture allows both web-admin and Python scoreboard to share
configuration through Supabase, eliminating need for direct API communication
and avoiding firewall/networking issues.

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,13 @@ NHL_STALE_CACHE_MAX_AGE=3600
 NHL_CIRCUIT_FAILURE_THRESHOLD=3
 NHL_MAX_FALLBACK_AGE_MINUTES=30
 
+# Supabase connection (for sports/leagues configuration)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
+
+# Device identification (optional - for device-specific configs)
+DEVICE_ID=
+
 # Multi-sport mode
 MULTI_SPORT_MODE=false
 LEGACY_MODE=false
