--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ Pillow==10.4.0
 python-dotenv==1.0.1
 python-dateutil==2.8.2
 websocket-client==1.8.0
+websockets==13.1
 cairosvg==2.7.1
-supabase==2.4.0
+supabase==2.10.0
