--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,7 @@ NHL_MAX_FALLBACK_AGE_MINUTES=30
 # Supabase connection (for sports/leagues configuration)
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # Device identification (optional - for device-specific configs)
 DEVICE_ID=
