docs: update configuration and improve project documentation
- Clean up .env.example with clear required vs optional sections
- Update README.md with new database function architecture
- Document fetch scripts populating league_teams table
- Add comprehensive troubleshooting for new configuration system
- Update project structure to reflect 4 migrations and updated scripts
- Add unified npm test script for both Python and web-admin tests
- Add user memory note about demo mode network connectivity

--- a/.env.example
+++ b/.env.example
@@ -1,49 +1,58 @@
-# Matrix hardware
+# ============================================================================
+# REQUIRED CONFIGURATION
+# ============================================================================
+
+# Supabase connection (required for device configuration)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# Device identification (required)
+DEVICE_ID=your-device-uuid
+
+# ============================================================================
+# OPTIONAL OVERRIDES
+# ============================================================================
+
+# Matrix hardware settings (override database config)
 MATRIX_WIDTH=64
 MATRIX_HEIGHT=32
+MATRIX_BRIGHTNESS=80
 MATRIX_CHAIN_LENGTH=1
 MATRIX_PARALLEL=1
 MATRIX_GPIO_SLOWDOWN=2
-MATRIX_BRIGHTNESS=80
 MATRIX_HARDWARE_MAPPING=adafruit-hat
 MATRIX_PWM_BITS=11
 
-# App settings
+# App behavior overrides
 TIMEZONE=America/Chicago
+SIM_MODE=false
+DEMO_MODE=false
+
+# Refresh intervals (override database config)
 REFRESH_PREGAME_SEC=30
 REFRESH_INGAME_SEC=5
 REFRESH_FINAL_SEC=60
 
-# Rendering
-SIM_MODE=false
-DEMO_MODE=false
+# Rendering settings (override database config)
 LIVE_LAYOUT=stacked
 LOGO_VARIANT=mini
 
-# Network resilience
+# Demo mode settings
+DEMO_LEAGUES=wnba,nhl
+DEMO_ROTATION_SECONDS=120
+
+# Network resilience for ESPN APIs
 ESPN_CACHE_TTL=300
 ESPN_STALE_CACHE_MAX_AGE=3600
 ESPN_CIRCUIT_FAILURE_THRESHOLD=3
 ESPN_MAX_FALLBACK_AGE_MINUTES=30
 
-# NHL API settings
-NHL_HTTP_TIMEOUT=10
-NHL_CACHE_TTL=300
-NHL_STALE_CACHE_MAX_AGE=3600
-NHL_CIRCUIT_FAILURE_THRESHOLD=3
-NHL_MAX_FALLBACK_AGE_MINUTES=30
+# Network timeout settings
+HTTP_TIMEOUT=10
 
-# Supabase connection (for sports/leagues configuration)
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=your-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
-
-# Device identification (optional - for device-specific configs)
-DEVICE_ID=
-
-# Multi-sport mode
-MULTI_SPORT_MODE=false
-LEGACY_MODE=false
+# Legacy environment-based sport configuration (deprecated - use database)
+# These are only used if Supabase connection fails
 ENABLE_WNBA=true
 ENABLE_NHL=false
 SPORT_PRIORITIES=wnba,nhl
