--- a/web-admin/package.json
+++ b/web-admin/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "npm run pretest:ci && jest --coverage --watchAll=false",
+    "test:coverage": "jest --coverage --watchman=false",
+    "test:ci": "npm run pretest:ci && jest --coverage --watchman=false",
     "pretest:ci": "(npm install --no-save @next/swc-linux-x64-gnu || true) && if command -v ldd >/dev/null 2>&1 && ldd --version 2>&1 | grep -qi musl; then npm install --no-save @next/swc-linux-x64-musl || true; fi",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
